k8s/network/03-allow-backend-to-mongodb.yaml
# NetworkPolicy que deja al backend conectarse a MongoDB
# Abre la entrada a Mongo solo desde los pods del backend en el puerto 27017
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mongodb
  namespace: default
spec:
  # Esta regla aplica a los pods de mongodb
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  # Solo acepta tráfico que venga del backend hacia el puerto 27017
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: capishop-backend
      ports:
        - protocol: TCP
          port: 27017
