k8s/network/07-allow-capishop-to-mongodb.yaml
# NetworkPolicy que deja al backend del namespace capishop llegar a MongoDB
# Abre la entrada a Mongo desde ese namespace y los pods del backend en el 27017
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-capishop-backend-to-mongodb
  namespace: default
spec:
  # Aplica a los pods de mongodb
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
  # Acepta tráfico del namespace capishop y del backend hacia el puerto 27017
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: capishop
        - podSelector:
            matchLabels:
              app: capishop-backend
      ports:
        - protocol: TCP
          port: 27017
